# basicgraphics

./: .gitignore  CMakeLists.txt
cmake/: AutoBuild.cmake  AutoBuildAssimp.cmake  AutoBuildSOIL.cmake  BasicGraphicsConfig.cmake.in
cmake/Modules/: FindAssimp.cmake  FindSOIL.cmake
external-patches/SOIL/: CMakeLists.txt
src/: BasicGraphics.h  Box.cpp  Box.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  GLSLProgram.cpp  GLSLProgram.h  Line.cpp  Line.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  fontstash.h  glfontstash.h
